--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1867,7 +1867,7 @@
     "    for key, subdf in df.groupby('location'):\n",
     "        m = np.mean(subdf['price_per_sqft'])\n",
     "        sd = np.std(subdf['price_per_sqft'])\n",
-    "        reduced_df = subdf[(subdf['price_per_sqft']>(m-sd)) & (subdf['price_per_sqft']<(m+sd))] #95%\n",
+    "        reduced_df = subdf[(subdf['price_per_sqft']>(m-sd)) & (subdf['price_per_sqft']<(m+sd))]\n",
     "        df_out = pd.concat([df_out, reduced_df], ignore_index=True)\n",
     "    return df_out"
    ]
